--- a/src/app/core/layout/footer/footer.component.html
+++ b/src/app/core/layout/footer/footer.component.html
@@ -1,3 +1,10 @@
 <footer>
-  <p>&copy; 2026 Melodica - Herramienta para composición musical</p>
+  <div class="footer-content">
+    <p>&copy; 2026 Melodica - Herramienta para composición musical</p>
+    <nav>
+      <a href="/about">Sobre Mí</a> |
+      <a href="mailto:contacto@melodica.com">Contacto</a> |
+      <a href="/privacidad">Privacidad</a>
+    </nav>
+  </div>
 </footer>
