--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,10 +1,11 @@
 <header>
   <nav>
     <ul>
+      <li><a routerLink="/home">Home</a></li>
+      <li><a routerLink="/about">About</a></li>
       <li><a routerLink="/guitarra">Guitarra</a></li>
       <li><a routerLink="/piano">Piano</a></li>
       <li><a routerLink="/acorde">Acorde</a></li>
-      <li><a routerLink="/historial">Historial</a></li>
     </ul>
   </nav>
 </header>
