--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -6,6 +6,11 @@
       <li><a routerLink="/guitarra">Guitarra</a></li>
       <li><a routerLink="/piano">Piano</a></li>
       <li><a routerLink="/acorde">Acorde</a></li>
+      <li class="pay">
+        <a href="https://cafecito.app/nicobutter" rel="noopener" target="_blank" class="cafecito-btn">
+          <img srcset="https://cdn.cafecito.app/imgs/buttons/button_1.png 1x, https://cdn.cafecito.app/imgs/buttons/button_1_2x.png 2x, https://cdn.cafecito.app/imgs/buttons/button_1_3.75x.png 3.75x" src="https://cdn.cafecito.app/imgs/buttons/button_1.png" alt="Invitame un café en cafecito.app" />
+        </a>
+      </li>
     </ul>
   </nav>
 </header>
