--- a/src/app/features/about/about.component.html
+++ b/src/app/features/about/about.component.html
@@ -13,7 +13,7 @@
           <h3>Susurro del Alba</h3>
           <p>Una melodía acústica que pinta el despertar del sol con cuerdas doradas.</p>
           <audio controls>
-            <source src="path/to/composition1.mp3" type="audio/mpeg">
+            <source src="/assets/audio/composition1.mp3" type="audio/mpeg">
             Tu navegador no soporta el elemento audio.
           </audio>
         </div>
@@ -21,7 +21,7 @@
           <h3>Danza de las Sombras</h3>
           <p>Un vals nocturno para piano que susurra secretos de la luna.</p>
           <audio controls>
-            <source src="path/to/composition2.mp3" type="audio/mpeg">
+            <source src="/assets/audio/composition2.mp3" type="audio/mpeg">
             Tu navegador no soporta el elemento audio.
           </audio>
         </div>
