--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
-<main>
-  <router-outlet></router-outlet>
-</main>
+<app-hero></app-hero>
+<app-taller></app-taller>
+<app-about></app-about>
+<app-footer></app-footer>
