--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -16,12 +16,12 @@
           </svg>
           <span>Componer</span>
         </a>
-        <button class="btn btn-primary" type="button">
+        <a routerLink="/songbook" class="btn btn-primary">
           <svg viewBox="0 0 24 24" fill="currentColor" class="btn-icon">
             <path d="M12 3V13.55C11.41 13.21 10.73 13 10 13C7.79 13 6 14.79 6 17S7.79 21 10 21 14 19.21 14 17V7H18V3H12Z"/>
           </svg>
           <span>Cancionero</span>
-        </button>
+        </a>
       </div>
 
       <!-- Cafecito Button -->
