--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 // Global Variables Import
-@import 'app/shared/styles/variables';
+@use 'app/shared/styles/variables' as *;
 
 // Google Fonts Import
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Dancing+Script:wght@400;700&family=Fira+Code:wght@300;400;500&display=swap');
