--- a/src/app/features/taller/taller.component.html
+++ b/src/app/features/taller/taller.component.html
@@ -2,17 +2,23 @@
   <h2>Tu Taller Musical</h2>
   <div class="feature-grid">
     <div class="feature">
-      <div class="feature-icon">🎸</div>
+      <div class="feature-icon">
+        <img src="assets/images/taller/guitar.jpg" alt="Guitarra Virtual" />
+      </div>
       <h3>Guitarra Virtual</h3>
       <p>Interactúa con una guitarra virtual para crear acordes y melodías.</p>
     </div>
     <div class="feature">
-      <div class="feature-icon">🎹</div>
+      <div class="feature-icon">
+        <img src="assets/images/taller/piano.jpg" alt="Piano Virtual" />
+      </div>
       <h3>Piano Virtual</h3>
       <p>Toca notas en un piano digital para componer armonías.</p>
     </div>
     <div class="feature">
-      <div class="feature-icon">🎵</div>
+      <div class="feature-icon">
+        <img src="assets/images/taller/chords.jpg" alt="Selector de Acordes" />
+      </div>
       <h3>Selector de Acordes</h3>
       <p>Elige y combina acordes sugeridos para tus composiciones.</p>
     </div>
