--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -14,7 +14,7 @@
           <svg viewBox="0 0 24 24" fill="currentColor" class="btn-icon">
             <path d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9V7L15 1H5C3.89 1 3 1.89 3 3V21C3 22.11 3.89 23 5 23H19C20.11 23 21 22.11 21 21V9M19 9H14V4H19V9M14 12H16V14H14V12M14 16H16V18H14V16M10 12H12V14H10V12M10 16H12V18H10V16M6 12H8V14H6V12M6 16H8V18H6V16Z"/>
           </svg>
-          <span>Componer</span>
+          <span>Detección de Audio</span>
         </a>
         <a routerLink="/songbook" class="btn btn-primary">
           <svg viewBox="0 0 24 24" fill="currentColor" class="btn-icon">
